--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,8 @@
 	<description>Products Page Example</description>
 	<properties>
 		<java.version>1.8</java.version>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<!--<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding> -->
 	</properties>
 	<dependencies>
 		<!-- https://mvnrepository.com/artifact/ma.glasnost.orika/orika-core -->
@@ -26,10 +26,10 @@
 				<artifactId>orika-core</artifactId>
 				<version>1.5.4</version>
 		</dependency>
-		<dependency>
+		<!--<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
-		</dependency>
+		</dependency>-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
