--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -6,6 +6,8 @@ spring.datasource.password=sa
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.datasource.initialization-mode=always
 spring.jpa.hibernate.ddl-auto=none
+
+
 # hibernate.X
 hibernate.dialect=org.hibernate.dialect.H2Dialect
 hibernate.show_sql=true
@@ -17,6 +19,7 @@ hibernate.cache.region.factory_class=org.hibernate.cache.ehcache.EhCacheRegionFa
 spring.datasource.schema=classpath:/data/h2db/schema.sql
 spring.datasource.data=classpath:/data/h2db/data.sql
 spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 # Show SQL
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
